--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,28 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
   pool: 5
-  timeout: 5000
+  username: root
+
+credentials: &credentials
+  username: <%= ENV["DATABASE_USERNAME"] %>
+  password:  <%= ENV["DATABASE_PASSWORD"] %>
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: forst-drunken-ibex_development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: forst-drunken-ibex_test
+
+staging:
+  <<: *default
+  <<: *credentials
+  database: forst-drunken-ibex_staging
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  <<: *credentials
+  host: db1.caynod.es
+  database: forst-drunken-ibex
