--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "forst-drunken-ibex",
-  "dependencies" : {
+  "dependencies": {
     "browserify": "~> 10.2.4",
     "browserify-incremental": "^3.0.1",
-    "coffeeify": "~> 0.6"
+    "coffeeify": "~> 0.6",
+    "js-cookie": "^2.0.4"
   },
   "engines": {
     "node": ">= 0.10"
